update github llink

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,9 @@
                     </div>
                 </div>
                 <div class="row-between">
-                    <a href="https://monsicha.info/" target="_blank">monsicha.info</a>
-                    <p>2025 © Monsicha Srisuantang</p>
+                    <a href="https://monsicha.info/" target="_blank">Monsicha Srisuantang</a>
+                    <a href="https://github.com/monsichasris/mta" target="_blank">GitHub↗</a>
+                    
                 </div>
             </div>
         </div>
